--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
         "tailwindcss": "^2.0.3",
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
+    },
+    "dependencies": {
+        "vue-currency-filter": "^5.2.0"
     }
 }
