--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
         "vue": "^3.0.5",
         "vue-loader": "^16.1.2"
     },
-    "dependencies": {}
+    "dependencies": {
+        "apexcharts": "^3.26.0",
+        "vue3-apexcharts": "^1.2.1"
+    }
 }
